--- a/components/contactUs/letsTalk/forms/style.module.scss
+++ b/components/contactUs/letsTalk/forms/style.module.scss
@@ -20,7 +20,7 @@
 
   .contactFormArea {
     .inputSpace {
-      margin-bottom: 2.25rem;
+      margin-bottom: 1.5rem;
       position: relative;
 
       &:last-child {
