--- a/components/home/digitalTransformation/style.module.scss
+++ b/components/home/digitalTransformation/style.module.scss
@@ -115,7 +115,7 @@
           }
         }
         .digitalText {
-          font-size: text(normal);
+          font-size: text(lg);
           font-weight: 400;
           color: rgba(color(text-primary), 0.6);
           line-height: text(xl);
@@ -125,7 +125,7 @@
         .customerList {
           .list {
             list-style: square;
-            font-size: text(normal);
+            font-size: text(lg);
             opacity: 0.6;
           }
         }
