--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -198,7 +198,7 @@ input:-webkit-autofill {
         button {
           width: 0.75rem;
           height: 0.75rem;
-          background: #dedede;
+          background: rgba(#ADADAD, 0.4);
           border-radius: 3.125rem;
           font-size: 0px;
           @include transition(0.5s);
@@ -661,13 +661,7 @@ input:-webkit-autofill {
   .slick-track {
     display: flex;
   }
-
-  .slick-slider .slick-track,
-  .slick-slider .slick-list {
-    @include mobile-tablet-p {
-      margin-top: 3.75rem;
-    }
-  }
+  
   /* the slides */
   .slick-slide {
     margin: 0 15px;
